[test] wIP testJavaClassAddSingle ok